[fix] CSS for dark mode

--- a/client/src/components/organisms/modeButton/ModeButton.module.css
+++ b/client/src/components/organisms/modeButton/ModeButton.module.css
@@ -3,4 +3,8 @@
   justify-content: end;
   align-items: center;
   margin-right: 2rem;
+  z-index: 100;
+  position: fixed;
+  top: 4rem;
+  right: 0.3rem;
 }
