--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,12 +1,8 @@
 body {
   margin: 0;
+  color: #384449;
   /* font-family: "Glass Antiqua", cursive; */
   /* font-family: "Special Elite", cursive; */
   font-family: "Krona One", sans-serif;
   /* font-family: "Italiana", serif; */
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
 }
